# VenkyAI

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  walkthrough.md.resolved
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/ai/: live_engine.rs  llm.rs  mod.rs  ollama.rs  openai.rs  streaming.rs  stt.rs
src-tauri/src/capture/: audio.rs  mod.rs  screen.rs
src-tauri/src/integrations/: crm.rs  mod.rs
src-tauri/src/session/: manager.rs  storage.rs
src/components/: Overlay.tsx  SessionSetup.tsx  Settings.tsx  Transcript.tsx
