[package]
name = "venky-ai"
version = "0.1.0"
description = "AI-powered real-time meeting assistant"
authors = ["venkatreddy"]
edition = "2021"

[lib]
name = "venky_ai_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
xcap = "0.8"
cpal = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
scap = "0.1.0-beta.1"
regex = "1.10"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
image = "0.25"
parking_lot = "0.12"
anyhow = "1"
dirs = "5"
once_cell = "1"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"
